terraform/vms.tf
# ============================================================
#  Les 3 VMs : Front (publique), Back et DB (privees)
# ============================================================

locals {
  # Ubuntu 22.04 LTS, image officielle Canonical
  image = {
    publisher = "Canonical"
    offer     = "0001-com-ubuntu-server-jammy"
    sku       = "22_04-lts-gen2"
    version   = "latest"
  }
}

# ------------------------------------------------------------
#  FRONT
# ------------------------------------------------------------

# Seule IP publique de l'infrastructure cote applicatif.
# Static : elle ne change pas au redemarrage, indispensable pour que
# l'enregistrement DNS du domaine reste valable.
resource "azurerm_public_ip" "front" {
  name                = "${var.prefix}-front-pip"
  location            = azurerm_resource_group.main.location
  resource_group_name = azurerm_resource_group.main.name
  allocation_method   = "Static"
  sku                 = "Standard"
  tags                = var.tags
}

resource "azurerm_network_interface" "front" {
  name                = "${var.prefix}-front-nic"
  location            = azurerm_resource_group.main.location
  resource_group_name = azurerm_resource_group.main.name
  tags                = var.tags

  ip_configuration {
    name                          = "internal"
    subnet_id                     = azurerm_subnet.public.id
    private_ip_address_allocation = "Static"
    private_ip_address            = var.front_private_ip
    public_ip_address_id          = azurerm_public_ip.front.id
  }
}

resource "azurerm_network_interface_security_group_association" "front" {
  network_interface_id      = azurerm_network_interface.front.id
  network_security_group_id = azurerm_network_security_group.front.id
}

resource "azurerm_linux_virtual_machine" "front" {
  name                  = "${var.prefix}-front"
  location              = azurerm_resource_group.main.location
  resource_group_name   = azurerm_resource_group.main.name
  size                  = var.vm_size
  admin_username        = var.admin_username
  network_interface_ids = [azurerm_network_interface.front.id]
  tags                  = var.tags

  # Aucun mot de passe : authentification par cle SSH uniquement
  disable_password_authentication = true

  admin_ssh_key {
    username   = var.admin_username
    public_key = file(pathexpand(var.ssh_public_key_path))
  }

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
    publisher = local.image.publisher
    offer     = local.image.offer
    sku       = local.image.sku
    version   = local.image.version
  }
}

# ------------------------------------------------------------
#  BACK
# ------------------------------------------------------------

resource "azurerm_network_interface" "back" {
  name                = "${var.prefix}-back-nic"
  location            = azurerm_resource_group.main.location
  resource_group_name = azurerm_resource_group.main.name
  tags                = var.tags

  ip_configuration {
    name                          = "internal"
    subnet_id                     = azurerm_subnet.private.id
    private_ip_address_allocation = "Static"
    private_ip_address            = var.back_private_ip
    # Pas de public_ip_address_id : cette VM n'est PAS joignable depuis Internet.
    # Elle sort via la NAT Gateway pour telecharger ses images Docker.
  }
}

resource "azurerm_network_interface_security_group_association" "back" {
  network_interface_id      = azurerm_network_interface.back.id
  network_security_group_id = azurerm_network_security_group.back.id
}

resource "azurerm_linux_virtual_machine" "back" {
  name                  = "${var.prefix}-back"
  location              = azurerm_resource_group.main.location
  resource_group_name   = azurerm_resource_group.main.name
  size                  = var.vm_size
  admin_username        = var.admin_username
  network_interface_ids = [azurerm_network_interface.back.id]
  tags                  = var.tags

  disable_password_authentication = true

  admin_ssh_key {
    username   = var.admin_username
    public_key = file(pathexpand(var.ssh_public_key_path))
  }

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
    publisher = local.image.publisher
    offer     = local.image.offer
    sku       = local.image.sku
    version   = local.image.version
  }
}

# ------------------------------------------------------------
#  DB
# ------------------------------------------------------------

resource "azurerm_network_interface" "db" {
  name                = "${var.prefix}-db-nic"
  location            = azurerm_resource_group.main.location
  resource_group_name = azurerm_resource_group.main.name
  tags                = var.tags

  ip_configuration {
    name                          = "internal"
    subnet_id                     = azurerm_subnet.private.id
    private_ip_address_allocation = "Static"
    private_ip_address            = var.db_private_ip
  }
}

resource "azurerm_network_interface_security_group_association" "db" {
  network_interface_id      = azurerm_network_interface.db.id
  network_security_group_id = azurerm_network_security_group.db.id
}

resource "azurerm_linux_virtual_machine" "db" {
  name                  = "${var.prefix}-db"
  location              = azurerm_resource_group.main.location
  resource_group_name   = azurerm_resource_group.main.name
  size                  = var.vm_size
  admin_username        = var.admin_username
  network_interface_ids = [azurerm_network_interface.db.id]
  tags                  = var.tags

  disable_password_authentication = true

  admin_ssh_key {
    username   = var.admin_username
    public_key = file(pathexpand(var.ssh_public_key_path))
  }

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
    publisher = local.image.publisher
    offer     = local.image.offer
    sku       = local.image.sku
    version   = local.image.version
  }
}
